--- a/app/src/main/res/layout/homemain.xml
+++ b/app/src/main/res/layout/homemain.xml
@@ -138,18 +138,19 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/menu_bar_icon"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/menu_bar_word"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_weight="0.28">
+            >
 
 
             <ImageButton
                 android:id="@+id/homeBtn"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
                 android:adjustViewBounds="true"
                 android:backgroundTint="@color/graygreen"
                 android:contentDescription="홈"
@@ -159,12 +160,12 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/myInfobtn"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/home_new" />
+                android:src="@drawable/home_new" />
 
             <ImageButton
                 android:id="@+id/myInfobtn"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
                 android:adjustViewBounds="true"
                 android:backgroundTint="@color/graygreen"
                 android:contentDescription="설정"
@@ -174,12 +175,12 @@
                 app:layout_constraintLeft_toRightOf="@+id/homeBtn"
                 app:layout_constraintRight_toLeftOf="@+id/addbtn"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/user_new" />
+                app:srcCompat="@drawable/user_last" />
 
             <ImageButton
                 android:id="@+id/addbtn"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="54dp"
                 android:adjustViewBounds="true"
                 android:backgroundTint="@color/graygreen"
                 android:contentDescription="내 음악 추가하기"
@@ -189,12 +190,12 @@
                 app:layout_constraintLeft_toRightOf="@+id/myInfobtn"
                 app:layout_constraintRight_toLeftOf="@+id/librarybtn"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/add_new" />
+                app:srcCompat="@drawable/add_last" />
 
             <ImageButton
                 android:id="@+id/librarybtn"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="52dp"
                 android:adjustViewBounds="true"
                 android:backgroundTint="@color/graygreen"
                 android:contentDescription="라이브러리"
@@ -204,12 +205,12 @@
                 app:layout_constraintLeft_toRightOf="@+id/addbtn"
                 app:layout_constraintRight_toLeftOf="@+id/setbtn"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/library_new" />
+                app:srcCompat="@drawable/library_last" />
 
             <ImageButton
                 android:id="@+id/setbtn"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
                 android:adjustViewBounds="true"
                 android:backgroundTint="@color/graygreen"
                 android:contentDescription="설정"
@@ -219,7 +220,7 @@
                 app:layout_constraintLeft_toRightOf="@+id/librarybtn"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/setting_new" />
+                app:srcCompat="@drawable/setting_last" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -227,14 +228,14 @@
             android:id="@+id/menu_bar_word"
             android:layout_width="match_parent"
             android:layout_alignParentBottom="true"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/menu_bar_icon"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_weight="0.15"
             >
-
 
             <TextView
                 android:id="@+id/homeword"
@@ -242,6 +243,8 @@
                 android:layout_height="20dp"
                 android:text="홈"
                 android:gravity="center"
+                android:textSize="13sp"
+                android:textColor="#8C000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -254,6 +257,8 @@
                 android:layout_height="20dp"
                 android:gravity="center"
                 android:text="내 정보"
+                android:textSize="13sp"
+                android:textColor="#8C000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
                 app:layout_constraintLeft_toRightOf="@+id/homeword"
@@ -266,6 +271,8 @@
                 android:layout_height="20dp"
                 android:gravity="center"
                 android:text="추가하기"
+                android:textSize="13sp"
+                android:textColor="#8C000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
                 app:layout_constraintLeft_toRightOf="@+id/myinfoword"
@@ -276,7 +283,9 @@
                 android:layout_width="0dp"
                 android:layout_height="20dp"
                 android:text="라이브러리"
+                android:textSize="13sp"
                 android:gravity="center"
+                android:textColor="#8C000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
                 app:layout_constraintLeft_toRightOf="@+id/addword"
@@ -288,6 +297,8 @@
                 android:gravity="center"
                 android:layout_height="20dp"
                 android:text="설정"
+                android:textSize="13sp"
+                android:textColor="#8C000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
                 app:layout_constraintLeft_toRightOf="@+id/libraryword"
