--- a/app/src/main/res/layout/homemain.xml
+++ b/app/src/main/res/layout/homemain.xml
@@ -106,6 +106,7 @@
             app:layout_constraintVertical_weight="0.1"/>
         
         <androidx.recyclerview.widget.RecyclerView
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="20dp"
