--- a/app/src/main/res/layout/pickmusic.xml
+++ b/app/src/main/res/layout/pickmusic.xml
@@ -184,7 +184,7 @@
             android:id="@+id/heartbtn"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/empty_heart"
+            android:src="@drawable/heart_outline_new"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
