pickmusic에서 아직까지 재생기능 못함.. 다시 해야한다...

--- a/app/src/main/res/layout/add_caption.xml
+++ b/app/src/main/res/layout/add_caption.xml
@@ -48,6 +48,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/backcontext"
                 android:layout_marginStart="10dp"
+                android:ellipsize="marquee"
                 app:layout_constraintHorizontal_weight="0.8"
                 app:layout_constraintRight_toLeftOf="@+id/savemenu"
                 android:textSize="20sp"
@@ -124,7 +125,7 @@
                         android:background="@null"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:hint="음악 내용을 입력해주세요."
+                        android:hint="작곡한 사람을 알려주세요."
                         android:id="@+id/writer_content"
                         app:layout_constraintLeft_toRightOf="@+id/title_writer"
                         app:layout_constraintBottom_toBottomOf="@+id/title_writer"
