--- a/app/src/main/res/layout/pickmusic.xml
+++ b/app/src/main/res/layout/pickmusic.xml
@@ -111,34 +111,21 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:src="@drawable/playbtn"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toLeftOf="@+id/pausebtn"
-                android:layout_marginEnd="15dp"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <ImageView
-                android:id="@+id/pausebtn"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:src="@drawable/pause"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/playbtn"
-                app:layout_constraintRight_toLeftOf="@+id/stopbtn"
-                android:layout_marginEnd="15dp"/>
-
-
-            <ImageView
+                android:layout_marginLeft="15dp"
                 android:id="@+id/stopbtn"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:src="@drawable/stop"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/pausebtn"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintStart_toEndOf="@+id/playbtn"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -237,6 +224,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:padding="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:id="@+id/collaborationlist"
@@ -267,7 +255,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="아직 콜라보레이션한 음악이 없습니다."
-                android:textSize="30sp"/>
+                android:textSize="15sp"/>
         </LinearLayout>
 
 
@@ -279,7 +267,7 @@
         android:id="@+id/menu_bar"
         android:background="@color/graygreen"
         android:layout_alignParentBottom="true"
-        app:layout_constraintTop_toBottomOf="@+id/topscreen_homemain"
+        app:layout_constraintTop_toBottomOf="@+id/topscreen_pickmusic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
