--- a/app/src/main/res/layout/detail_info.xml
+++ b/app/src/main/res/layout/detail_info.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/unionlayout_info"
+        app:layout_constraintBottom_toTopOf="@+id/linelayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="20dp"
@@ -19,6 +19,7 @@
             android:id="@+id/heartbtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
+
             android:src="@drawable/dark_heart_empty"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -48,19 +49,117 @@
             app:layout_constraintStart_toEndOf="@+id/heartbtn"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <View
+        android:id="@+id/linelayout"
+        android:layout_width="match_parent"
+        android:layout_height="0.7dp"
+        android:background="@color/gray_sto"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/songinfolayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/unionlayout_info"
-        android:paddingHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/songinfolayout"
+        android:paddingHorizontal="22dp"
+        android:layout_marginVertical="30dp"
+        android:paddingBottom="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/linelayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/downloadlayout">
 
+            <ImageView
+                android:id="@+id/downloadbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/info_download"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/downloadtxt"
+                android:layout_marginEnd="15dp"/>
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:id="@+id/downloadtxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="오프라인 저장"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/downloadbtn"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/downloadlayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginVertical="20dp"
+            android:id="@+id/artistlayout">
 
+            <ImageView
+                android:id="@+id/artistbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/info_person"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/artisttxt"
+                android:layout_marginEnd="15dp"/>
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:id="@+id/artisttxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="아티스트 페이지로 이동"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/artistbtn"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/artistlayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginVertical="20dp"
+            android:id="@+id/creditlayout">
 
+            <ImageView
+                android:id="@+id/creditbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/info_ppl"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/credittxt"
+                android:layout_marginEnd="15dp"/>
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:id="@+id/credittxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="노래 크레딧 보기"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/creditbtn"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
