--- a/app/src/main/res/layout/pickmusic.xml
+++ b/app/src/main/res/layout/pickmusic.xml
@@ -67,102 +67,66 @@
             app:layout_constraintRight_toRightOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/ingmusic"
+        android:background="@drawable/medicontrol"
         app:layout_constraintTop_toBottomOf="@+id/picktop"
-        app:layout_constraintBottom_toTopOf="@+id/variation_music"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_weight="0.05"
-        android:layout_marginBottom="20dp">
-
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00:00:00"
-            android:textSize="25sp"
-            android:id="@+id/musictime"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/musicplaycontroll"
-            />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/medicontrol"
-            android:id="@+id/musicplaycontroll"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="20dp"
-            android:paddingLeft="20dp"
-            app:layout_constraintLeft_toRightOf="@+id/musictime"
-            app:layout_constraintRight_toRightOf="parent">
-
-            <ImageView
-                android:id="@+id/playbtn"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:src="@drawable/playbtn"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <ImageView
-                android:layout_marginLeft="15dp"
-                android:id="@+id/stopbtn"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:src="@drawable/stop"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/playbtn"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/variation_music"
-        app:layout_constraintTop_toBottomOf="@+id/ingmusic"
         app:layout_constraintBottom_toTopOf="@+id/iconlayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintVertical_weight="0.05"
-        android:layout_marginBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
-        <TextView
+        android:layout_marginBottom="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:layout_marginHorizontal="20dp"
+        android:paddingRight="15dp"
+        android:paddingLeft="20dp">
+
+            <ImageView
+                android:id="@+id/playbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/playbtn"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:layout_centerVertical="true"/>
+
+
+            <ImageView
+                android:layout_marginStart="15dp"
+                android:id="@+id/stopbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/stop"
+                android:layout_toEndOf="@id/playbtn"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:layout_centerVertical="true"/>
+
+        <SeekBar
+            android:id="@+id/seek_bar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="여기에 음파 variation 들어가야 한다."
-            android:padding="20dp"
-            android:background="@drawable/medicontrol"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/stopbtn"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:backgroundTint="@color/white"/>
 
 
+
+    </RelativeLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/iconlayout"
-        app:layout_constraintTop_toBottomOf="@+id/variation_music"
-        app:layout_constraintBottom_toTopOf="@+id/collaboration_text"
+        app:layout_constraintTop_toBottomOf="@+id/ingmusic"
+        app:layout_constraintBottom_toTopOf="@+id/original_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintVertical_weight="0.04">
@@ -208,56 +172,94 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:textStyle="bold"
-        android:text="콜라보레이션"
+        android:text="원곡"
         android:gravity="center"
-        android:textSize="15sp"
-        android:id="@+id/collaboration_text"
+        android:textSize="16sp"
+        android:id="@+id/original_text"
         app:layout_constraintTop_toBottomOf="@+id/iconlayout"
-        app:layout_constraintBottom_toTopOf="@+id/collaborationlist"
+        app:layout_constraintBottom_toTopOf="@+id/original_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_weight="0.02"
-        android:layout_marginBottom="10dp">
-
+        app:layout_constraintVertical_weight="0.02">
     </TextView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:id="@+id/collaborationlist"
-        android:background="@drawable/recycle_background"
-        app:layout_constraintTop_toBottomOf="@+id/collaboration_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_weight="0.14"
-        >
-    </androidx.recyclerview.widget.RecyclerView>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="해당 곡이 원곡입니다."
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/original_text"
+                app:layout_constraintBottom_toTopOf="@+id/collaboration_text"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:paddingVertical="10dp"
+                android:id="@+id/original_layout"
+                android:background="@drawable/recycle_background"
+                android:textSize="15sp"
+            android:layout_marginBottom="10dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:textStyle="bold"
+            android:text="콜라보레이션"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:id="@+id/collaboration_text"
+            app:layout_constraintTop_toBottomOf="@+id/original_layout"
+            app:layout_constraintBottom_toTopOf="@+id/collaborationlist_layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintVertical_weight="0.02"
+            android:layout_marginBottom="10dp">
+        </TextView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:background="@drawable/recycle_background"
-            android:id="@+id/emptytxt"
-            android:visibility="gone"
-            android:orientation="vertical"
+            android:id="@+id/collaborationlist_layout"
             app:layout_constraintTop_toBottomOf="@+id/collaboration_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintVertical_weight="0.14">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:id="@+id/collaborationlist"
+                android:background="@drawable/recycle_background"
+                >
+            </androidx.recyclerview.widget.RecyclerView>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:paddingVertical="10dp"
+            android:background="@drawable/recycle_background"
+            android:id="@+id/emptytxt"
+            android:visibility="gone"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/collaboration_text"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintVertical_weight="0.14">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="아직 콜라보레이션한 음악이 없습니다."
                 android:textSize="15sp"/>
         </LinearLayout>
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -298,6 +300,7 @@
             </FrameLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
