--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -7,19 +7,21 @@
     <LinearLayout
         android:layout_margin="10dp"
         android:id="@+id/ranking"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/num_background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="5dp"
         >
 
         <TextView
             android:id="@+id/numRanking"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:gravity="center"
             android:textColor="@color/maingreen"
             android:text="1" />
@@ -31,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="텍스트"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:ellipsize="marquee"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ranking"
